#28: Added ability to export components to a DejaCode Product using the ProductComponent API. Added component summary table for components that will be uploaded to DejaCode.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -183,3 +183,7 @@ div.dataTables_scrollHead th:first-child {      /*For rounded table border*/
   height: 75%;
   padding: 10px 0;
 }
+
+/*////// Component Export  //////*/
+
+#export-input { width: 550px;}
