Text-background color of packages changed to green as identifier

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,6 +64,10 @@ body {
   stroke: gray;
 }
 
+.package rect {
+  fill:green;
+  stroke:green;
+}
 .clue-license rect {
   fill: #3984b6;
   stroke: #3984b6;
