#67: Fixed node view when window is resized
* Added viewBox attribute to make nodeview SVG scalable
* Added preserveAspectRatio attribute
* Removed width and height from config attributes
* Removed margin config
* Updated CSS for nodeview SVG container
* Added CSS to ensure absolute positioning

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,6 +78,19 @@ body {
   border: 1px solid #ddd;
   border-radius: 4px;
   margin-top: 5px;
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  vertical-align: top;
+  overflow: hidden;
+}
+
+.nodeview-content {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 div.node-content {
