Update default style for context menu #80
* Modified the the default context jstree menu css
* Modified the click and hover colors for jstree

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,7 +132,7 @@ div.node-content {
 }
 
 .jstree-default .jstree-clicked {
-    background: #dce1e5;
+    background: rgba(158,158,158, 0.50);
 }
 
 .node-btn-group {
