--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,8 +145,9 @@
 }
 .vakata-context li > a:hover {
   position: relative;
-  background-color: #e8eff7;
-  box-shadow: 0 0 2px #0a6aa1;
+  /*background-color: #e8eff7;*/
+  background-color: rgba(158,158,158, 0.20);
+  /*box-shadow: 0 0 2px #0a6aa1;*/
 }
 .vakata-context li > a.vakata-context-parent {
   background-image: url("data:image/gif;base64,R0lGODlhCwAHAIAAACgoKP///yH5BAEAAAEALAAAAAALAAcAAAIORI4JlrqN1oMSnmmZDQUAOw==");
@@ -159,7 +160,8 @@
 .vakata-context .vakata-context-hover > a {
   position: relative;
   background-color: #e8eff7;
-  box-shadow: 0 0 2px #0a6aa1;
+  background-color: rgba(158,158,158, 0.20);
+  /*box-shadow: 0 0 2px #0a6aa1;*/
 }
 .vakata-context .vakata-context-separator > a,
 .vakata-context .vakata-context-separator > a:hover {
@@ -290,7 +292,7 @@
   transition: background-color 0.15s, box-shadow 0.15s;
 }
 .jstree-default .jstree-hovered {
-  background: #e7f4f9;
+  background: rgba(158,158,158, 0.40);
   border-radius: 2px;
   box-shadow: inset 0 0 1px #cccccc;
 }
