Replace Glyphicons with Font Awesome in jsTree #55
  * Custom class added to main.css, applied to directories but not
    files.

Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -270,3 +270,8 @@ div.dataTables_scrollHead th:first-child {
   margin: -120px 0 0 -125px;
   display: none;
 }
+
+/* Change the default color of the FontAwesome folder  */
+.fa_custom {
+  color: #3498db;
+}
