Initial port of html-app license summary #133
Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,9 +135,7 @@ div.node-content {
   stroke-width: 2px;
 }
 
-.node-hide {
-  display: none;
-}
+.hide-container { display: none; }
 
 /* select2 custom css */
 .select2-container {
@@ -274,4 +272,23 @@ div.dataTables_scrollHead th:first-child {
 /* Change the default color of the FontAwesome folder  */
 .fa_custom {
   color: #3498db;
+}
+
+/* Bar Charts */
+.bar-chart{ width: 100%; }
+
+.bar-chart rect { fill: #3498db; }
+
+.bar-chart text {
+  fill: black;
+  font-size: 12px;
+  font-family: 'Lato', Helvetica, sans-serif;
+  text-anchor: end;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
 }
