Save splitter widths in localStorage #21
  * Splitter div-width setting is now stored as JSON in localStorage.
  * We now display the Component Summary table at full (or near full)
    width and restore the user’s resizing of the Tree and Table/Node
    views when the user returns to those views.
  * Any saved splitter div-width setting is cleared from localStorage
    when the app closes.
  * The splitter gutter is no longer visible in Component Summary view.
  * The jsTree is now slightly closer to the top border of its
    container.
  * split.js has been copied to assets/js/.

Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,7 +158,7 @@ div.node-content {
   overflow-y: scroll;
   height: 100%;
   margin: 0 0 0 10px;
-  padding-top: 40px;
+  padding-top: 15px;
   background-color: #f9f9f9;
 }
 
@@ -316,5 +316,15 @@ html, body {
 .gutter.gutter-horizontal {
   height: 100%;
   float: left;
+}
+
+.div-hide {
+  display: none;
+  visibility: hidden;
+}
+
+.div-show {
+  display: block;
+  visibility: visible;
 }
 /* end of split.js-related CSS */
