--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,9 @@
 
 body {
   font-family: 'Lato', Helvetica, sans-serif;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
 
 .logo {
@@ -78,14 +81,10 @@ body {
   border: 1px solid #ddd;
   border-radius: 4px;
   margin-top: 5px;
-  display: inline-block;
   position: absolute;
   width: 100%;
-  padding-bottom: 100%;
-  vertical-align: top;
+  height: 100%;
   overflow: hidden;
-  top: 0;
-  left: 0;
 }
 
 .nodeview-content {
@@ -110,6 +109,8 @@ div.node-content {
 
 #nodeview-container {
   position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 #recenter { color: #fff; }
@@ -150,12 +151,9 @@ div.node-content {
 #jstree {
   border: 1px solid #ddd;
   border-radius: 4px;
-  min-width: 150px;
-  min-height: 100px;
   overflow-x: scroll;
   overflow-y: scroll;
   height: 100%;
-  margin: 0 0 0 10px;
   padding-top: 15px;
   background-color: #f9f9f9;
 }
@@ -168,27 +166,31 @@ div.node-content {
   padding: 0 0 0 10px;
 }
 
-#tabbar {
-  padding-top: 10px;
-}
-
-#leftCol{
-  padding-top: 10px;
-  /* For sidebar space */
-  margin-left: -50px;
-}
-
 /*////// Sidebar //////*/
+
+#root-div, #clues-container, #node-container, #component-container {
+  height: 100%;
+  width: 100%;
+}
+
+#tabbar  {
+  height: 100%;
+  padding-top: 10px;
+}
+
+#leftCol {
+  height: 100%;
+  margin-left: 50px;
+}
+
 .btn-sidebar {
   color: grey;
   background-color: #000;
-    /*border-color: #ccc;*/
   padding: 0;
   width: 50px;
 }
 
 .sidebar-nav li .btn-sidebar {
-    /*text-indent: 10px;*/
     line-height: 40px;
 }
 
@@ -210,15 +212,10 @@ div.node-content {
     outline: none;
 }
 
-
 /*////// DataTables custom //////*/
 
 /*For rounded table border*/
-div.dataTables_scrollHead table {
-  border-top-left-radius: 4px;
-}
-
-/*For rounded table border*/
+div.dataTables_scrollHead table,
 div.dataTables_scrollHead th:first-child {
   border-top-left-radius: 4px;
 }
@@ -230,10 +227,6 @@ div.dataTables_scrollHead th:first-child {
   height: 75%;
   padding: 10px 0;
 }
-
-/*////// Components view //////*/
-
-#tabbar.col-md-11 {margin-left: -15px;}
 
 /*////// Progress Indicator //////*/
 
@@ -274,30 +267,10 @@ div.dataTables_scrollHead th:first-child {
   color: #3498db;
 }
 
-/* This set of CSS is required for the split.js splitter/resizing functionality */
-
-.root-div {
-  height: 100%;
-  /* This removes the unwanted horizontal scrollbar. */
-  margin: 0;
-}
-
-html, body {
-  height: 100%;
-  margin: 0;
-}
-
-#sidebar-div {
-  height: 100%;
-  border: 0;
-  width: 100px;
-  max-width: 100px;
-}
+/*////// Split.js  //////*/
 
 .gutter {
   background-color: #e8e8e8;
-  background-repeat: no-repeat;
-  background-position: 50%;
 }
 
  .gutter.gutter-horizontal {
@@ -323,9 +296,9 @@ html, body {
   display: block;
   visibility: visible;
 }
-/* end of split.js-related CSS */
 
-/* Bar Charts */
+/*////// Bar Chart Summary  //////*/
+
 .bar-chart{ width: 100%; }
 
 .bar-chart rect { fill: #3498db; }
