--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,11 +80,15 @@ body {
 .svg-container{
   border: 1px solid #ddd;
   border-radius: 4px;
-  margin-top: 5px;
   position: absolute;
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+
+#node-container {
+  display: flex;
+  flex-flow: column;
 }
 
 .nodeview-content {
@@ -141,7 +145,7 @@ div.node-content {
 /* select2 custom css */
 .select2-container {
   width: 100% !important;
-  padding: 0;
+  padding-bottom: 5px;
 }
 
 .modal-header {
@@ -168,18 +172,20 @@ div.node-content {
 
 /*////// Sidebar //////*/
 
-#root-div, #clues-container, #node-container, #component-container {
+#clues-container, #node-container, #component-container, #bar-chart-container {
   height: 100%;
   width: 100%;
+  padding-top: 10px;
 }
 
 #root-div {
+  height: 100%;
+  width: 100%;
   padding-left: 50px;
 }
 
 #tabbar  {
   height: 100%;
-  padding-top: 10px;
 }
 
 #leftCol {
