--- a/assets/css/simple-sidebar.css
+++ b/assets/css/simple-sidebar.css
@@ -22,7 +22,7 @@
     height: 100%;
     margin-left: -50px;
     overflow-y: auto;
-    background: #000;
+    background: #21252b;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
