--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -343,3 +343,22 @@ html, body {
     stroke: #000;
     shape-rendering: crispEdges;
 }
+
+/* Remove focus from Bar Chart dropdown after selection is made. */
+.select2-selection:focus {
+  outline: none;
+}
+
+/* Tooltip for Bar Chart */
+ .toolTip {
+  position: absolute;
+  display: none;
+  min-width: 80px;
+  height: auto;
+  background: #333333;
+  border: 1px solid #000000;
+  border-radius: 4px;
+  padding: 14px;
+  text-align: center;
+  color: #ffffff;
+}
