Add new tab-container class #148
* Used a single CSS class style (tab-container) for containers that
  used the same style

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,7 +27,7 @@ body {
 /*---------------------------------------
   Layout
 -----------------------------------------*/
-#clues-container, #node-container, #component-container, #bar-chart-container {
+.tab-container {
   height: 100%;
   width: 100%;
   padding-top: 10px;
@@ -40,7 +40,7 @@ body {
   display: flex;
 }
 
-#tabbar  {
+#tabbar {
   height: 100%;
   flex: 1;
 }
