Add back removed css for tree links #148
* The styling needed for tree links was removed in 875e78f

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -170,6 +170,12 @@ div.node-content {
   font-size: 18px;
 }
 
+.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 2px;
+}
+
 /* select2 custom css */
 .select2-container {
   width: 100% !important;
