--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,7 +297,7 @@
   box-shadow: inset 0 0 1px #cccccc;
 }
 .jstree-default .jstree-clicked {
-  background: #beebff;
+  background: #cccccc;
   border-radius: 2px;
   box-shadow: inset 0 0 1px #999999;
 }
@@ -313,7 +313,7 @@
   box-shadow: none;
 }
 .jstree-default .jstree-disabled.jstree-clicked {
-  background: #efefef;
+  background: rgba(158,158,158, 0.40);
 }
 .jstree-default .jstree-disabled > .jstree-icon {
   opacity: 0.8;
@@ -337,7 +337,7 @@
   box-shadow: none;
 }
 .jstree-default.jstree-checkbox-no-clicked .jstree-clicked.jstree-hovered {
-  background: #e7f4f9;
+  background: rgba(158,158,158, 0.40);
 }
 .jstree-default.jstree-checkbox-no-clicked > .jstree-wholerow-ul .jstree-wholerow-clicked {
   background: transparent;
@@ -362,12 +362,12 @@
   box-sizing: border-box;
 }
 .jstree-default .jstree-wholerow-hovered {
-  background: #e7f4f9;
+  background: rgba(158,158,158, 0.40);
 }
 .jstree-default .jstree-wholerow-clicked {
-  background: #beebff;
   background: -webkit-linear-gradient(top, #beebff 0%, #a8e4ff 100%);
   background: linear-gradient(to bottom, #beebff 0%, #a8e4ff 100%);
+  background: rgba(158,158,158, 0.50);
 }
 .jstree-default .jstree-node {
   min-height: 24px;
@@ -435,7 +435,7 @@
   background: transparent;
 }
 .jstree-default .jstree-disabled.jstree-clicked {
-  background: #efefef;
+  background: rgba(158,158,158, 0.50);
 }
 .jstree-default .jstree-checkbox {
   background-position: -164px -4px;
@@ -608,7 +608,7 @@
   background: transparent;
 }
 .jstree-default-small .jstree-disabled.jstree-clicked {
-  background: #efefef;
+  background: rgba(158,158,158, 0.50);
 }
 .jstree-default-small .jstree-checkbox {
   background-position: -167px -7px;
@@ -781,7 +781,7 @@
   background: transparent;
 }
 .jstree-default-large .jstree-disabled.jstree-clicked {
-  background: #efefef;
+  background: rgba(158,158,158, 0.50);
 }
 .jstree-default-large .jstree-checkbox {
   background-position: -160px 0px;
@@ -1007,10 +1007,10 @@
     height: 40px;
   }
   .jstree-default-responsive .jstree-wholerow-hovered {
-    background: #e7f4f9;
+    background: rgba(158,158,158, 0.40);
   }
   .jstree-default-responsive .jstree-wholerow-clicked {
-    background: #beebff;
+    background: rgba(158,158,158, 0.50);
   }
   .jstree-default-responsive .jstree-children .jstree-last > .jstree-wholerow {
     box-shadow: inset 0 -6px 3px -5px #666666;
