Add 'Package info' group button #91
  * Also added CSS in main.css to slightly reduce buttons' left/right
    padding.

Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -367,3 +367,14 @@ div.dataTables_scrollHead th:first-child {
   text-align: center;
   color: #ffffff;
 }
+
+/* Modify the colvis column-visibility and -grouping buttons */
+.buttons-colvis {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.buttons-colvisGroup {
+  padding-right: 10px;
+  padding-left: 10px;
+}
