Change menu action colors #153
* Change on hover, on click, and background colors

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/DataTables/Buttons-1.1.2/css/buttons.bootstrap.css
+++ b/assets/DataTables/Buttons-1.1.2/css/buttons.bootstrap.css
@@ -41,7 +41,7 @@ ul.dt-button-collection.dropdown-menu.fixed {
 }
 ul.dt-button-collection.dropdown-menu.fixed.two-column {
   margin-left: -150px;
-  background-color: #58ACE3;
+  background-color: white;
 }
 ul.dt-button-collection.dropdown-menu.fixed.three-column {
   margin-left: -225px;
