--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -268,6 +268,17 @@ div.dataTables_scrollHead th:first-child {
   padding-left: 10px;
 }
 
+.dropdown-menu > .active > a{
+  color: #000;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-menu > .active > a:hover {
+  color: #000;
+  background-color: rgba(0, 0, 0, 0.2);
+  outline: 0;
+}
+
 /*---------------------------------------
   Help page
 -----------------------------------------*/
