Update sidebar menu css when selected #4
* Add .btn-change.selected css for when sidebar menu is currently selected
* Fix node view to only redraw when there is a currentId
* Fix chart summary files_count error

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -239,13 +239,18 @@ div.node-content {
 .sidebar-nav li .btn-sidebar:hover {
     text-decoration: none;
     color: #fff;
-    background: rgba(255,255,255,0.2);
+    background: rgba(255, 255, 255, 0.25);
 }
 
 .sidebar-nav li .btn-sidebar:active,
 .sidebar-nav li .btn-sidebar:focus {
     text-decoration: none;
     outline: none;
+}
+
+.sidebar-nav li .btn-change.selected {
+    color: #fff;
+    background: rgba(255, 255, 255, 0.12);
 }
 
 /*---------------------------------------
