--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -409,3 +409,45 @@ div.dataTables_scrollHead th:first-child {
   text-align: center;
   color: #ffffff;
 }
+
+/*---------------------------------------
+  Dashboard
+-----------------------------------------*/
+#dashboard-container{
+  background-color: #FAFAFB;
+}
+
+.dashboard-lead{
+  padding: 0 0 15px 15px;
+}
+
+.card {
+  border-radius: 2px;
+  box-shadow: 1px 0 8px -3px #b1b1b1;
+  background-color: #FFFFFF;
+  margin-bottom: 30px;
+}
+
+.card .content {
+  text-align: center;
+  padding: 15px 15px 0;
+}
+
+.card .header {
+  text-align: center;
+  padding: 15px 15px;
+}
+
+.card .title {
+  margin: 0;
+  color: #3D7AFC;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+.card .category {
+  font-size: 16px;
+  font-weight: 400;
+  color: #9A9A9A;
+  margin-bottom: 0px;
+}
