--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -441,13 +441,17 @@ div.dataTables_scrollHead th:first-child {
 .card .title {
   margin: 0;
   color: #3D7AFC;
-  font-weight: 400;
+  font-weight: 600;
   padding-bottom: 10px;
 }
 
 .card .category {
-  font-size: 16px;
+  font-size: 17px;
   font-weight: 400;
   color: #9A9A9A;
   margin-bottom: 0px;
+}
+
+.c3 svg {
+  font-family: 'Lato', Helvetica, san-serif;
 }
