Fix DT filter to match width of the DT column #194
* This required setting the css width from auto to 100% and then
  setting the word wrapping

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -278,6 +278,12 @@ div.node-content {
 /*---------------------------------------
   DataTables custom
 -----------------------------------------*/
+
+.dataTable td select {
+  word-wrap: break-word;
+  width: 100%;
+}
+
 /*For rounded table border*/
 div.dataTables_scrollHead table,
 div.dataTables_scrollHead th:first-child {
