Add back card title padding #168
Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -490,6 +490,7 @@ div.dataTables_scrollHead th:first-child {
   margin: 0;
   color: #3D7AFC;
   font-weight: 600;
+  padding-bottom: 10px;
 }
 
 .card .category {
