--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -343,11 +343,14 @@ div.dataTables_scrollHead th:first-child {
   text-align: center;
 }
 
-.progress .indicator {
-  position: relative;
-  width: 50px;
-  height: 50px;
+.progress .progressbar {
+  position: static;
+  width: 100%;
+  height: 100%;
   margin: auto;
+}
+
+.progress .indeterminate {
   border: 6px solid #B4DDF8;
   border-radius: 50%;
   border-top: 6px solid #3498db;
