Fix input placeholder text width #204
Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -505,3 +505,11 @@ div.dataTables_scrollHead th:first-child {
 .c3 svg {
   font-family: 'Lato', Helvetica, san-serif;
 }
+
+/*---------------------------------------
+  Select2 custom
+-----------------------------------------*/
+
+.select2-container .select2-search__field{
+  width: 100% !important;
+}
