Add progress bar for DejaCode Upload #212 #217
* Also changed border css for select2 dropdown in chart summary view

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -536,6 +536,14 @@ div.dataTables_scrollHead th:first-child {
 }
 
 /*---------------------------------------
+  Component DataTable
+-----------------------------------------*/
+.components-table-container {
+  width: 100%;
+  height: 100%;
+}
+
+/*---------------------------------------
   Select2 custom
 -----------------------------------------*/
 
