Refactored controllers into separate directory #168
* Each of the controller classes have been moved to a directory
  called controllers.
* The View class that each of the controllers extends was renamed to
  Controller.
* Refactored the controller classes to take in a container id instead
  of a specific selector. The selector is specified within the controller
  classes and is expected to be contained somewhere within the
  controller id element in html.

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -163,7 +163,7 @@ body {
   stroke: #1d2e81;
 }
 
-.svg-container{
+.svg-container {
   border: 1px solid #ddd;
   border-radius: 4px;
   position: absolute;
@@ -436,11 +436,11 @@ div.dataTables_scrollHead th:first-child {
     overflow-y: scroll;
 }
 
-.bar-chart{ width: 100%; }
+.barchart{ width: 100%; }
 
-.bar-chart rect { fill: #3498db; }
+.barchart rect { fill: #3498db; }
 
-.bar-chart text {
+.barchart text {
   fill: black;
   font-size: 12px;
   font-family: 'Lato', Helvetica, sans-serif;
