Update dashboard to be consistent with primary blue #168
* #3499DB is the main blue that we use throughout the rest of the app.
  Updated the Dashboard color palette to use that blue as the primary.
  Also, changed the accent colors to come from that spectrum.

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -520,7 +520,7 @@ div.dataTables_scrollHead th:first-child {
 
 .card .title {
   margin: 0;
-  color: #3D7AFC;
+  color: #3898fc;
   font-weight: 600;
   padding-bottom: 10px;
 }
