Remove grey background from component dialog #22
Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -79,6 +79,7 @@ body {
   Node View
 -----------------------------------------*/
 
+
 #nodeview-container {
   display: flex;
   flex-direction: column;
@@ -215,6 +216,13 @@ body {
 
 .modal-header {
   word-wrap: break-word;
+}
+
+/*---------------------------------------
+  Componet Dialog
+-----------------------------------------*/
+.modal-backdrop {
+  background: none;
 }
 
 /*---------------------------------------
