Display version and options of imported scan #239
Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -558,3 +558,11 @@ div.dataTables_scrollHead th:first-child {
 .select2-container .select2-search__field{
   width: 100% !important;
 }
+
+/*---------------------------------------
+  ScanCode modal custom
+-----------------------------------------*/
+
+body .modal-scancode {
+  width: 800px;
+}
