Right-justify numeric columns #286
Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -280,6 +280,9 @@ body {
 /*---------------------------------------
   DataTables custom
 -----------------------------------------*/
+.column-right-justify {
+  text-align: right;
+}
 
 .dataTable td select {
   word-wrap: break-word;
