Change ClueDataTable to ScanDataDataTable #268
* Change varible/class/ids in main.css
* Change varible naming in aboutCodeBarChart.js
* Change varible naming in aboutCodeDashboard.js
* Change varible naming in aboutCodeJsTree.js
* Change varible naming in renderer.js
* Change varible/class/ids in index.html
* Change aboutCodeClueDataTable.js to aboutCodeScanDataDataTable.js

Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -140,7 +140,7 @@ body {
   fill: black;
 }
 
-.clues rect {
+.scandata rect {
   x: 0;
   y: -10;
   height: 20px;
@@ -149,17 +149,17 @@ body {
   stroke-width:3
 }
 
-.clue-filename rect {
+.scandata-filename rect {
   fill: gray;
   stroke: gray;
 }
 
-.clue-license rect {
+.scandata-license rect {
   fill: #3984b6;
   stroke: #3984b6;
 }
 
-.clue-copyright rect {
+.scandata-copyright rect {
   fill: #1d2e81;
   stroke: #1d2e81;
 }
