--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -173,7 +173,7 @@ body {
   overflow: hidden;
 }
 
-.component-status-dropdown { padding-left: 5px; }
+.conclusion-status-dropdown { padding-left: 5px; }
 
 .status-dropdown-menu { min-width: 110px; }
 
@@ -547,9 +547,9 @@ div.dataTables_scrollHead th:first-child {
 }
 
 /*---------------------------------------
-  Component DataTable
+  Conclusion DataTable
 -----------------------------------------*/
-.components-table-container {
+.conclusions-table-container {
   width: 100%;
   height: 100%;
 }
