Add jstree coloring for scancode packages #26
Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -379,6 +379,10 @@ div.dataTables_scrollHead th:first-child {
 .fa_custom {
   color: #3498db;
 }
+
+.fa_custom_package {
+  color: #f6b735;
+}
 /*---------------------------------------
   Split.js
 -----------------------------------------*/
