Add Conclusion markers for the JSTree
* Refactor JSTree data handling code
* Add 4 new conclusion icon color definitions
* Open/close folder icons change colors correctly
* Update JSTree sort function to account for new types
* Change JSTree marker to correct Conclusion value on the fly

Addresses #209

Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -383,6 +383,22 @@ div.dataTables_scrollHead th:first-child {
 .fa_custom_package {
   color: #f6b735;
 }
+
+.fa_custom_analyzed {
+  color: #83ad45;
+}
+
+.fa_custom_na {
+  color: #f94848;
+}
+
+.fa_custom_oc {
+  color: #601697;
+}
+
+.fa_custom_nr {
+  color: #1697af;
+}
 /*---------------------------------------
   Split.js
 -----------------------------------------*/
