Dashboard view now shows current selected path #336
Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -508,6 +508,14 @@ div.dataTables_scrollHead th:first-child {
   Dashboard
 -----------------------------------------*/
 
+#dashboard-title-text {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-align: left;
+  direction: rtl;
+}
+
 #dashboard-container {
   display: flex;
   flex-direction: column;
