--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -399,6 +399,22 @@ div.dataTables_scrollHead th:first-child {
 .fa_custom_nr {
   color: #1697af;
 }
+
+.fa_custom_approved {
+  color: #008000;
+}
+
+.fa_custom_prohibited {
+  color: #c83025;
+}
+
+.fa_custom_recommended {
+  color: #002FFF;
+}
+
+.fa_custom_restricted {
+  color: #FFcc33;
+}
 /*---------------------------------------
   Split.js
 -----------------------------------------*/
