--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -548,7 +548,7 @@ div.dataTables_scrollHead th:first-child {
   width: 100%;
 }
 
-#tab-dashboard{
+#tab-file-dashboard{
   background-color: #FAFAFB;
 }
 
