Set fixed height for scanDataTable columns
* Remove text wrapping for entire dataTable
* Set fixed pixel height for table rows

Addresses: #1

Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -1,4 +1,6 @@
 /*---------------------------------------
+    $('.jstree').jstree(true).refresh(true);
+    $('.jstree').jstree(true).refresh(true);
   Font source mapping
 -----------------------------------------*/
 @font-face {
@@ -284,8 +286,11 @@ body {
   text-align: right;
 }
 
+.dataTable tr td {
+  height: 10px;
+}
+
 .dataTable td select {
-  word-wrap: break-word;
   width: 100%;
 }
 
