--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -282,12 +282,19 @@ body {
 /*---------------------------------------
   DataTables custom
 -----------------------------------------*/
-.column-right-justify {
-  text-align: right;
+.table {
+  table-layout: fixed;
+  word-wrap: break-word;
 }
 
-.dataTable tr td {
-  height: 10px;
+.dataTable td {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.column-right-justify {
+  text-align: right;
 }
 
 .dataTable td select {
