Create basic outline
Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/docs-update/source/_static/theme_overrides.css
+++ b/docs-update/source/_static/theme_overrides.css
@@ -148,3 +148,8 @@ code, .rst-content tt, .rst-content code {
     margin-bottom: 0px;
     line-height: 24px;
 }
+
+/* h2 {
+    color: #cc0000;
+    color: #ff0000;
+} */
