--- a/docs/source/_static/theme_overrides.css
+++ b/docs/source/_static/theme_overrides.css
@@ -5,9 +5,10 @@ body {
 }
 
 .rst-content .guilabel {
-    border: 1px solid #ccffff;
     border: 0;
     background: #e6ffff;
+    /* background: #ffffcc; */
+    /* background: #ffffe6; */
     font-size: 80%;
     font-size: 12px;
     font-size: 14px;
@@ -23,11 +24,22 @@ body {
 }
 
 .rst-content kbd {
-    font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",Courier,monospace;
-    border: solid 1px #d8d8d8;
-    background-color: #f5f5f5;
-    padding: 0px 3px;
-    border-radius: 3px;
+    -moz-border-radius:3px;
+    -moz-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+    -webkit-border-radius:3px;
+    -webkit-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+    background-color:#f7f7f7;
+    border:1px solid #ccc;
+    border-radius:3px;
+    box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+    color:#333;
+    display:inline-block;
+    font-family:Arial,Helvetica,sans-serif;
+    font-size: 13px;
+    line-height:1.4;
+    margin:0 .1em;
+    padding: 2px 3px 0px 3px;
+    text-shadow:0 1px 0 #fff;
 }
 
 .wy-nav-content-wrap a {
