add limit table view search
Signed-off-by: chauhanparth210 <00chauhanparth@gmail.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -297,6 +297,11 @@ body {
   text-align: right;
 }
 
+.radio-inline {
+  margin: 4px;
+  margin-top: 0;
+}
+
 .dataTable td select {
   width: 100%;
 }
