Revise 'Overview', 'Getting Started' sections
Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/docs/source/_static/theme_overrides.css
+++ b/docs/source/_static/theme_overrides.css
@@ -136,3 +136,7 @@ code, .rst-content tt, .rst-content code {
     margin-bottom: 0px;
     line-height: 24px;
 }
+
+.with-border {
+    border: solid 1px #cccccc;
+}
