--- a/docs/source/_static/theme_overrides.css
+++ b/docs/source/_static/theme_overrides.css
@@ -171,4 +171,14 @@ div.genindex-jumpbox {
 /* See, e.g., https://docutils.sourceforge.io/docs/ref/rst/directives.html#figure */
 .legend p {
     font-size: 14px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    color: #000000;
+    font-style: italic;
+}
+
+/* inserting figure into bulleted list has 0 margin at top and too much (24px) at bottom */
+.rst-content div.figure {
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
